apps/backend/seed_output.txt
/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
seed_monthly_data.ts(76,18): error TS1003: Identifier expected.

    at createTSError (/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:863:19)
    at /Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1379:34
    at Object.compile (/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1451:13)
    at Module.m._compile (/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1617:30)
    at loadTS (node:internal/modules/cjs/loader:1826:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/emreyilmaz/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 1003 ]
}
